trying to fix alignment

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ Html,body{
   width: 40em;
   padding: .8em;
   padding-top:1em;
-  margin-top:5em;
+  margin-top:em;
   border: 1px solid #c0c0c0;
   border-radius: 2px;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16), 0px 0px 0px 1px rgba(0,0,0,0.08);
@@ -73,12 +73,12 @@ Html,body{
   Border-color: black;
   border-width:;
   color:black;
-  font-size:1.2em;
-  marigin-top:-10em;
+  font-size:.2em;
+  marigin-top: 4em;
   margin-bottom:10em;
 }
 .field {
-  display: inline-block;
+  display:inline;
   vertical-align: middle;
   margin-bottom:-9%;
   
